# loggercpp

./: .gitignore  CMakeLists.txt  Makefile  logger.cpp  logger.hpp  logger_api.cpp  logger_api.h  loggerstream.hpp  macros.hpp  main.cpp
usage/: Makefile  app  loggerstream.hpp  main.cpp
